src/objects/Lease__c.object
<CustomObject>
    <description>Archived system function</description>
    <fields>
        <fullName>Ad_Valorem_Tax_Reponsibility__c</fullName>
        <label>Ad Valorem Tax Reponsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_Month__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;, ( Lease_Rate__c  * Square_Footage1__c)/12 , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;, ( Lease_Rate__c  * Square_Footage1__c), IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;,  Lease_Rate__c , IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;,  Lease_Rate__c  / 12 ,0))))</formula>
        <label>Amount/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Year__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;,  Lease_Rate__c  * Square_Footage1__c , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;, ( Lease_Rate__c  * Square_Footage1__c) * 12, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;,  Lease_Rate__c , IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;,  Lease_Rate__c  * 12 ,0))))</formula>
        <label>Amount/Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cable_Responsibility__c</fullName>
        <label>Cable Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_Responsibility__c</fullName>
        <label>Electric Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalations__c</fullName>
        <label>Escalations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gas_Responsibility__c</fullName>
        <label>Gas Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Responsibility__c</fullName>
        <label>Insurance Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Date__c</fullName>
        <label>Lease Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Rate__c</fullName>
        <label>Rental Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Months__c</fullName>
        <label>Lease Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT ( Property__r.Market__c )</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>Property__r.PropertyType__c</formula>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Commencement_Date__c</fullName>
        <label>Rent Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Rate_Type__c</fullName>
        <label>Rental Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>$/SF/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$/SF/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount/Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Water Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_Month__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;,  Lease_Rate__c , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;,  Lease_Rate__c / 12, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;, (Lease_Rate__c/ Square_Footage1__c)/12 , IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;, ( Lease_Rate__c )/ Square_Footage1__c ,0))))</formula>
        <label>$/SF/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF_Year__c</fullName>
        <formula>IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Year&quot;,  Lease_Rate__c  , IF( TEXT(Rental_Rate_Type__c) = &quot;$/SF/Month&quot;,  Lease_Rate__c  * 12, IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Year&quot;,  Lease_Rate__c / Square_Footage1__c , IF( TEXT(Rental_Rate_Type__c) = &quot;Amount/Month&quot;, ( Lease_Rate__c  * 12)/ Square_Footage1__c ,0))))</formula>
        <label>$/SF/Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sewer_Responsibility__c</fullName>
        <label>Sewer Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Space</label>
        <referenceTo>Spaces__c</referenceTo>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Footage1__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <description>Square Footage From Space</description>
        <formula>Space__r.Square_Footage__c</formula>
        <inlineHelpText>Square Footage From Space</inlineHelpText>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT (Property__r.State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <formula>TEXT ( Property__r.Submarket__c )</formula>
        <label>Submarket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite_Floor__c</fullName>
        <label>Suite/Floor #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Responsibility__c</fullName>
        <label>Telephone Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trash_Responsibility__c</fullName>
        <label>Trash Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <formula>Property__r.Zip_Code__c</formula>
        <label>Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <label>system.lease</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lease Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>system.leases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>